<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Node2">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:background="@drawable/rounded_corner"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNode2Text"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="36dp"
        android:gravity="center_horizontal">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/node2CameraBtn"
        android:onClick="CameraBtn2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/cameraBtn"
        app:backgroundTint="@color/blue"
        app:icon="@android:drawable/ic_menu_camera"
        app:iconGravity="textStart"
        app:iconPadding="5dp"
        tools:ignore="UsingOnClickInXml" />


    <TableLayout
        android:id="@+id/tableNode1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@android:color/white">

        <TableRow
            android:background="@color/colbackground">

            <androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colname1"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colname2"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colname3"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="180dp"
                    android:layout_marginLeft="180dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>
    </TableLayout>

</LinearLayout>


